# reaper

./: README.md  RESEARCH.md  V0.1-CRITERIA.md  pyproject.toml
src/reaper/: __init__.py  analysis.py  autodelay.py  chain.py  cli.py  client.py  detect.py  engine.py  findings.py  httpspec.py  reporting.py  runner.py  sarif.py
tests/: conftest.py  racelab.py  test_analysis.py  test_autodelay.py  test_detect.py  test_engine.py  test_findings.py  test_race_lab.py  test_socks5.py  test_state_chain.py  test_wheel_ship_gate.py
